syntax = "proto3";

option csharp_namespace = "GrpcClient";

package greet;

service Greeter {
  rpc GetUsers (GetUsersRequest) returns (GetUsersReply);

  rpc CreateNewUser (CreateUserRequest) returns (CreateUserReply);

  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserReply);

  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserReply);
}

message GetUsersRequest {}

message CreateUserRequest {
  string username = 1;
  string password = 2;
}

message UpdateUserRequest {
  string id = 1;
  optional string username = 2;
  optional string password = 3;
}

message DeleteUserRequest {
	string id = 1;
}

message GetUsersReply {
  repeated User users = 1;
}

message CreateUserReply {
  bool result = 1;
}

message UpdateUserReply {
  bool result = 1;
}

message DeleteUserReply {
  bool result = 1;
}

message User {
  string id = 1;
  string username = 2;
  string password = 3;
}
